--- a/01-js-intro-and-jquery/index.html
+++ b/01-js-intro-and-jquery/index.html
@@ -8,6 +8,14 @@
 	<script src="js/script.js"></script>
 </head>
 <body>
+ <div class="w3cvalid">
+ 		<p>
+      <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img 	src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+            	alt="CSS SUCCEED!" />
+      </a>
+  	</p>
+  </div>
 	<header>
 		<h1>Hello World</h1>
 		<input type="text" class="alias">
@@ -16,6 +24,10 @@
 	<section>
 		<div id="listResponse"></div>
 	</section>
+	<div class="background"></div>
+	<aside>
+		<div id="listTweets"></div>
+	</aside>
 	<footer></footer>
 </body>
 </html>
