--- a/05-backbone/index.html
+++ b/05-backbone/index.html
@@ -7,12 +7,6 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	
- 		<script src="http://cufon.shoqolate.com/js/cufon-yui.js" type="text/javascript"></script>
-		<script src="myriad-pro.cufonfonts.js" type="text/javascript"></script>
-		<script type="text/javascript">
-			Cufon.replace('.myriad-pro-regular', { fontFamily: 'Myriad Pro Regular', hover: true });
-		</script>
 </head>
 <body>
 	<header>
@@ -24,20 +18,25 @@
 		
 		<div id="App">
 
-			<script id="formTemplate" type="text/template">
-				<form class="MovieForm" action="">
-					<input type="text" class="title" placeholder= 'Title here...' >
-					<input type="text" class="genre" placeholder= 'Genre...'>
-					<input type="text" class="year" placeholder= 'Year...'> 
-					<input type="submit" value="Ok">
+			<script id='formTemplate' type='text/template'>
+				<form class='MovieForm' action=''>
+					<input type='text' class='title' placeholder= 'Title here...' >
+					<input type='text' class='genre' placeholder= 'Genre...'>
+					<input type='text' class='year' placeholder= 'Year...'> 
+					<input type='submit' value='Ok'>
 				</form>
 			</script>
 
 
-			<script id="movieTemplate" type="text/template">
+			<script id='movieTemplate' type='text/template'>
 
 				<div id='options'>
-					<button id='edit' class='button' alt=''> Edit </button><button id='remove' class='button' alt=''> Remove </button>
+					<button id='edit' class='button' alt=''>
+						<img src='app/resources/edit.png' alt='Edit'/>
+					</button>
+					<button id='remove' class='button' alt=''>
+						<img src='app/resources/Remove.png' alt='Remove'/>
+					</button>
 				</div>
 				<div id="front">
 					<div class='title'>
@@ -50,24 +49,37 @@
 
 			</script>
 
-			<script id="collectionTemplate" type="text/template">
+			<script id='newMovieTemplate' type='text/template'>
+
+				<div id='options'>
+					<button id='Add' class='button' alt=''><img src='' alt=''/>Add Movie</button>
+				</div>
+
+			</script>
+
+			<script id='collectionTemplate' type='text/template'>
 				<div id='FilmsCollection' class='Collection'>
 					<div id='Title'> My Movie Collection </div>
-					<div class="content">
+					<div class='content'>
 						//Movies in here
 					</div>
 				</div>
 			</script>
-
-
+		
 
 			
+			
 		</div>
-
+			<form class='newMovieForm' action=''>
+					<input type='text' class='title' placeholder= 'Title here...' >
+					<input type='text' class='genre' placeholder= 'Genre...'>
+					<input type='text' class='year' placeholder= 'Year...'> 
+					<input type='submit' value='Ok'>
+			</form>
 			
 
 		
-		<script data-main="app" src="lib/require.js"></script>
+		<script data-main='app' src='lib/require.js'></script>
 		
 	</section>
 	<footer>
